[package]
name = "gv100ad"
version = "0.2.0"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]
edition = "2018"
description = "Parser to read GV100AD files from the Statistisches Bundesamt Germany"
license = "MIT"
documentation = "https://docs.rs/gv100ad"
homepage = "https://github.com/jgraef/gv100ad"
repository = "https://github.com/jgraef/gv100ad"
readme = "README.md"
categories = ["parsing"]

[dependencies]
chrono = "0.4"
thiserror = "1.0"
tracing = "0.1"
